WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177753
[WPE] Fix UIProcess build with GStreamer and without VIDEO
https://bugs.webkit.org/show_bug.cgi?id=177753
Summary
[WPE] Fix UIProcess build with GStreamer and without VIDEO
Olivier Blin
Reported
2017-10-02 10:37:03 PDT
GStreamer builds fail when WebAudio is enabled but VIDEO disabled. This is the WPE counterpart of
bug 153135
.
Attachments
Patch
(1.38 KB, patch)
2017-10-02 10:38 PDT
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2017-10-02 10:38:52 PDT
Created
attachment 322389
[details]
Patch
Michael Catanzaro
Comment 2
2017-10-02 11:33:46 PDT
Comment on
attachment 322389
[details]
Patch OK, but really I don't see why this feature should be guarded by ENABLE(VIDEO) as it should work just fine for WebAudio alone.
WebKit Commit Bot
Comment 3
2017-10-02 12:02:30 PDT
Comment on
attachment 322389
[details]
Patch Clearing flags on attachment: 322389 Committed
r222729
: <
http://trac.webkit.org/changeset/222729
>
WebKit Commit Bot
Comment 4
2017-10-02 12:02:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug